--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.3",
@@ -51,11 +52,14 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.2.7",
-    "@storybook/addon-essentials": "^6.2.7",
-    "@storybook/addon-links": "^6.2.7",
-    "@storybook/node-logger": "^6.2.7",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "gh-pages": "^3.1.0"
+    "jest-image-snapshot": "^4.4.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^8.0.0",
+    "start-server-and-test": "^1.12.1"
   }
 }
